<resources>
    <string name="app_name">NoteIT</string>
    <string name="welcome_text">Welcome to NoteIT!</string>
    <string name="welcome_text_func">Where you can manage your important thoughts.</string>
    <string name="welcome_lets_get_started">Let\'s get started…</string>
    <string name="begin">Begin</string>
    <string name="creation_date">Creation date:</string>
    <string name="category">Category:</string>
    <string name="notes">Notes</string>
    <string name="my_notes">My notes</string>
    <string name="add_note">Add note</string>
    <string name="clear_notes">Clear notes</string>
    <string name="title">Title:</string>
    <string name="example_shopping">Shopping</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="test">Test</string>
    <string name="edit_note">Edit note</string>
    <string name="family">Family</string>
    <string name="example_text">Example text</string>
    <string name="weather">Weather</string>
</resources>