<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="editNoteViewModel"
            type="hu.unideb.noteit.editnote.EditNoteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_primary_dark"
        tools:context=".editnote.EditNoteFragment">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/title"
            android:textColor="@color/color_primary_lighter"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/color_primary"
            android:hint="@string/example_shopping"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/color_primary_lighter"
            android:textColorHighlight="@color/color_secondary_light"
            android:textColorHint="@color/color_primary_light"
            app:editNoteTitle="@{editNoteViewModel.note}"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/category"
            android:textColor="@color/color_primary_lighter"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextCategories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/color_primary"
            android:hint="@string/family"
            android:maxLines="1"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/color_primary_lighter"
            android:textColorHighlight="@color/color_secondary_light"
            android:textColorHint="@color/color_primary_light"
            app:editNoteCategory="@{editNoteViewModel.note}"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            tools:ignore="SpeakableTextPresentCheck" />

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@color/color_primary_lighter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView5" />

        <EditText
            android:id="@+id/editTextNote"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_primary"
            android:gravity="start|top"
            android:hint="@string/example_text"
            android:padding="5dp"
            android:textColor="@color/color_primary_lighter"
            android:textColorHint="@color/color_primary_dark"
            app:editNoteText="@{editNoteViewModel.note}"
            app:layout_constraintBottom_toTopOf="@+id/viewLine1"
            app:layout_constraintEnd_toEndOf="@+id/viewLine"
            app:layout_constraintStart_toStartOf="@+id/viewLine"
            app:layout_constraintTop_toBottomOf="@+id/viewLine" />

        <View
            android:id="@+id/viewLine1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/color_primary_lighter"
            app:layout_constraintBottom_toTopOf="@+id/buttonDelete"
            app:layout_constraintEnd_toEndOf="@+id/editTextNote"
            app:layout_constraintStart_toStartOf="@+id/editTextNote" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/color_secondary"
            android:onClick="@{()->editNoteViewModel.saveThings()}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonInsertWeatherData" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/color_secondary"
            android:onClick="@{()->editNoteViewModel.deleteNote()}"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonClear"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_secondary"
            android:text="@string/clear"
            app:layout_constraintBottom_toBottomOf="@+id/buttonDelete"
            app:layout_constraintEnd_toStartOf="@+id/buttonInsertWeatherData"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonDelete"
            app:layout_constraintTop_toTopOf="@+id/buttonDelete" />

        <Button
            android:id="@+id/buttonInsertWeatherData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_secondary"
            android:text="@string/weather"
            app:layout_constraintBottom_toBottomOf="@+id/buttonSave"
            app:layout_constraintEnd_toStartOf="@+id/buttonSave"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonClear"
            app:layout_constraintTop_toTopOf="@+id/buttonSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>